# sr-config

./: .bzrignore  .gitignore  CMakeLists.txt  README.md  aws.yml  changelog.tex  env_variables.bashrc  stack.xml
sr_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_config/launch/: sr_system_umd.launch
sr_cyberglove_config/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
sr_cyberglove_config/calibrations/: cyberglove.cal  left_cyberglove.cal  left_cyberglove.yaml  penny_cyberglove_test.yaml  penny_cyberglove_test_better.yaml  penny_no_wrist_pitch.yaml  right_cyberglove.yaml  right_cyberglove_anastasis.yaml  right_cyberglove_old.yaml
sr_cyberglove_config/mappings/: GloveToHandMappings_generic  generic_backup
sr_cyberglove_config/serial/: serial_port.yaml
sr_ethercat_hand_config/: CHANGELOG.rst  CMakeLists.txt  README.md  configuration.yaml  diagnostic_analyzer.yaml  diagnostic_analyzer_bimanual.yaml  diagnostic_analyzer_bimanual_extra_lite.yaml  diagnostic_analyzer_bimanual_lite.yaml  diagnostic_analyzer_extra_lite.yaml  diagnostic_analyzer_lite.yaml  lh_diagnostic_analyzer.yaml  mainpage.dox  manifest.xml  measure_tuning.py  package.xml  rh_diagnostic_analyzer.yaml
sr_ethercat_hand_config/calibrations/: arm_calibration  calibration.yaml  pressure_calibration.yaml  pressure_calibration_raw.yaml
sr_ethercat_hand_config/calibrations/lh/: calibration.yaml  pressure_calibration.yaml
sr_ethercat_hand_config/calibrations/rh/: calibration.yaml  diff.txt  pressure_calibration.yaml  pressure_calibration_raw.yaml
sr_ethercat_hand_config/config/: umd_system.urdf.xacro
sr_ethercat_hand_config/controls/: friction_compensation.yaml  sr_edc_default_controllers.launch
sr_ethercat_hand_config/controls/host/: hand_trajectory_controller.yaml  sr_edc_effort_controllers.yaml  sr_edc_effort_controllers_PWM.yaml  sr_edc_joint_muscle_valve_controllers.yaml  sr_edc_joint_position_controllers.yaml  sr_edc_joint_position_controllers_PWM.yaml  sr_edc_joint_velocity_controllers.yaml  sr_edc_joint_velocity_controllers_PWM.yaml  sr_edc_mixed_position_velocity_joint_controllers.yaml  sr_edc_mixed_position_velocity_joint_controllers_PWM.yaml  sr_edc_muscle_joint_position_controllers.yaml
sr_ethercat_hand_config/controls/host/lh/: sr_edc_calibration_controllers.yaml  sr_edc_effort_controllers.yaml  sr_edc_effort_controllers_PWM.yaml  sr_edc_grasp_controller_PWM.yaml  sr_edc_grasp_controllers_PWM.yaml  sr_edc_hybrid_controller_PWM.yaml  sr_edc_hybrid_controllers_PWM.yaml  sr_edc_joint_position_controllers.yaml  sr_edc_joint_position_controllers_PWM.yaml  sr_edc_joint_variable_pid_position_controllers_PWM.yaml  sr_edc_joint_velocity_controllers_PWM.yaml  sr_edc_mixed_position_velocity_joint_controllers.yaml  sr_edc_mixed_position_velocity_joint_controllers_PWM.yaml
sr_ethercat_hand_config/controls/host/rh/: grasp_pwm_cp.yaml  sr_edc_calibration_controllers.yaml  sr_edc_controller_PWM.yaml  sr_edc_effort_controllers.yaml  sr_edc_effort_controllers_PWM.yaml  sr_edc_grasp_controller.yaml  (+10 more)
sr_ethercat_hand_config/controls/motors/: motor_board_effort_controllers.yaml  motor_board_effort_controllers_ff_and_th.yaml  motor_board_effort_controllers_stopped.yaml
sr_ethercat_hand_config/demos/: Demo_2new.py  IROS_fan_demo(*).py  IROS_fan_demo.py  burn_in.py  burn_in_lh.py  burn_in_rh.py  burn_in_states.py  demo_1.py  demo_l.py  demo_lo.py  demo_ls.py  demo_move_joint.py  demo_new.py  demo_old_broken(*).py  demo_old_broken.py  demo_r.py  demo_r_no_pst.py  demo_r_no_tactiles.py  demo_rc.py  demo_ro.py  demo_rs.py  left_hand_demo.py  rhand_demo_card.launch  right_hand_demo.py  store_left_hand.py  store_right_hand.py
sr_ethercat_hand_config/launch/: bag_rotate.py  record_params.py  sr_bimanual.launch  sr_hand_system.launch  sr_imu.launch  sr_lhand.launch  sr_lhand.launch~  sr_penny_demos.launch  sr_rhand.launch  sr_rhand_arm.launch  sr_rosbag_log.launch  sr_system.launch  sr_system_umd.launch  sr_traj_ctrl.launch  test.launch  ws_diff.pl
sr_ethercat_hand_config/launch/demos/: all_hands_demo.launch  all_hands_store.launch  lhand_demo.launch  lhand_open.launch  lhand_store.launch  rhand_demo.launch  rhand_demo_card.launch  rhand_open.launch  rhand_store.launch
sr_ethercat_hand_config/launch/sensors/: optoforce_hand.launch
sr_ethercat_hand_config/launch/tools/: cyberglove.launch  cyberglove_control.launch  lhand_gui.launch  lhand_robot_monitor.launch  lhand_tactile_gui.launch  rhand_gui.launch  rhand_robot_monitor.launch  rhand_tactile_gui.launch
sr_ethercat_hand_config/logging/: bag_rotate.py  test_diff.launch  ws_diff.py
sr_ethercat_hand_config/mappings/: joint_to_motor_mapping.yaml  joint_to_muscle_mapping.yaml
sr_ethercat_hand_config/mappings/lh/: joint_mapping.yaml  joint_to_motor_mapping.yaml  load_joint_mapping.xml
sr_ethercat_hand_config/mappings/rh/: joint_mapping.yaml  joint_to_motor_mapping.yaml  load_joint_mapping.xml
sr_ethercat_hand_config/rates/: motor_data_polling.yaml  muscle_data_polling.yaml  sensor_data_polling.yaml
sr_ethercat_hand_config/scripts/: bottle_squeeze_example.py  bottle_test.sh  sr_optoforce_example.py
sr_multi_camera_config/: CMakeLists.txt  README.md  camera_scene.rviz  package.xml  package.xml~
sr_multi_camera_config/launch/: camera_scene_cal.launch  cameras.launch  publish_tf.launch
sr_multi_camera_config/urdf/: camera_scene.urdf  camera_scene.xacro
sr_multi_camera_config/yaml/: .#camera_scene_mutable_joint_states.yamlnew  camera_scene_caljob.yaml  camera_scene_cameras.yaml  camera_scene_mutable_joint_states.yaml  camera_scene_mutable_joint_states.yamlnew  camera_scene_targets.yaml  m10x10.yaml
sr_optoforce_config/: CMakeLists.txt  package.xml
sr_optoforce_config/config/: optoforce_hand.rviz  single_channel_3_axis_generic_scale.yaml
sr_optoforce_config/launch/: optoforce_hand.launch  rviz.launch
sr_ur_arm_config/: CMakeLists.txt  package.xml
sr_ur_arm_config/config/: ur_arm_1_robot_hw.yaml  ur_arm_2_robot_hw.yaml
sr_ur_arm_config/config/ur_arm_1_programs/: ur_robot_program
(+17 files in other folders)
