<package>
  <name>sr_cyberglove_config</name>
  <version>1.2.0</version>
  <description>sr_cyberglove_config contains configuration files for the cyberglove (calibration, mapping) for the Shadow Robot hand</description>
  <maintainer email="">Toni Oliver</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_cyberglove_config</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>